--- a/lib/src/main/res/layout/action_sheet.xml
+++ b/lib/src/main/res/layout/action_sheet.xml
@@ -94,7 +94,7 @@
             android:layout_height="45dp"
             android:background="?android:attr/selectableItemBackground"
             android:gravity="center"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textAllCaps="false"
             android:textColor="@color/blue_light"
             android:textSize="22dp" />
